Fix alignment for IE

--- a/sections/_contact.scss
+++ b/sections/_contact.scss
@@ -17,7 +17,7 @@
         height: 0.0625rem;
         border: none;
         width: 9.375rem;
-        margin: 1.5em 0;
+        margin: 1.5em 2rem;
     }
 }
 
@@ -26,7 +26,7 @@
         .contact__items {
             @include display(flex);
             @include flex-direction(row);
-            @include justify-content(space-evenly);
+            @include justify-content(center);
             text-align: left;
             width: 100%;
         }
